q06/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 8080          
    targetPort: 80      
    nodePort: 30085
