q06/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: ca1
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer
