q06/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: ca1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: nginx
